Изменение работы БД,Убраны заглушки из контроллеров